<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_row_selector"
    android:padding="8dp">

    <TextView
        android:id="@+id/parking_area_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:text="@string/area"
        android:textStyle="normal"
        android:layout_alignParentTop="true" />
    
    <TextView
        android:id="@+id/plate_no_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_below="@id/parking_area_text_view_id"
        android:text="@string/plate_no"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/violation_type_text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_below="@id/plate_no_text_view_id"
        android:text="@string/violations"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/date_time_violation_text_view_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/violation_type_text_view_id"
        android:layout_marginTop="1dip"
        android:text="@string/date_time_violation"
        android:textSize="14dp"
        android:textStyle="normal" />
</RelativeLayout>
